Inclusion de la bibliografia en el .bib, organizacion tentativa de capitulos y cambio de algunas palabras en ingles al espanol

--- a/Bibliography.bib
+++ b/Bibliography.bib
@@ -1,40 +1,331 @@
-@article{Reference1,
-	Abstract = {We have developed an enhanced Littrow configuration extended cavity diode laser (ECDL) that can be tuned without changing the direction of the output beam. The output of a conventional Littrow ECDL is reflected from a plane mirror fixed parallel to the tuning diffraction grating. Using a free-space Michelson wavemeter to measure the laser wavelength, we can tune the laser over a range greater than 10 nm without any alteration of alignment.},
-	Author = {C. J. Hawthorn and K. P. Weber and R. E. Scholten},
-	Journal = {Review of Scientific Instruments},
-	Month = {December},
-	Number = {12},
-	Numpages = {3},
-	Pages = {4477--4479},
-	Title = {Littrow Configuration Tunable External Cavity Diode Laser with Fixed Direction Output Beam},
-	Volume = {72},
-	Url = {http://link.aip.org/link/?RSI/72/4477/1},
-	Year = {2001}}
+@string{sm  ={Scripta Materialia}}
+@string{am  ={Acta Materialia}}
+@string{prl ={Phys. Rev. Letters}}
+@string{prb ={Phys. Rev. B.}}
+@string{s ={Science}}
 
-@article{Reference3,
-	Abstract = {Operating a laser diode in an extended cavity which provides frequency-selective feedback is a very effective method of reducing the laser's linewidth and improving its tunability. We have developed an extremely simple laser of this type, built from inexpensive commercial components with only a few minor modifications. A 780~nm laser built to this design has an output power of 80~mW, a linewidth of 350~kHz, and it has been continuously locked to a Doppler-free rubidium transition for several days.},
-	Author = {A. S. Arnold and J. S. Wilson and M. G. Boshier},
-	Journal = {Review of Scientific Instruments},
-	Month = {March},
-	Number = {3},
-	Numpages = {4},
-	Pages = {1236--1239},
-	Title = {A Simple Extended-Cavity Diode Laser},
-	Volume = {69},
-	Url = {http://link.aip.org/link/?RSI/69/1236/1},
-	Year = {1998}}
+@Book{allen87,
+  author =	 {Allen, M.P. and Tildesley, D.J.},
+  title = 	 {Computer simulation of liquids},
+  publisher = 	 {Oxford University Press},
+  year = 	 1987
+}
 
-@article{Reference2,
-	Abstract = {We present a review of the use of diode lasers in atomic physics with an extensive list of references. We discuss the relevant characteristics of diode lasers and explain how to purchase and use them. We also review the various techniques that have been used to control and narrow the spectral outputs of diode lasers. Finally we present a number of examples illustrating the use of diode lasers in atomic physics experiments. Review of Scientific Instruments is copyrighted by The American Institute of Physics.},
-	Author = {Carl E. Wieman and Leo Hollberg},
-	Journal = {Review of Scientific Instruments},
-	Keywords = {Diode Laser},
-	Month = {January},
-	Number = {1},
-	Numpages = {20},
-	Pages = {1--20},
-	Title = {Using Diode Lasers for Atomic Physics},
-	Volume = {62},
-	Url = {http://link.aip.org/link/?RSI/62/1/1},
-	Year = {1991}}
+@Article{arman10,
+  author = 	 {Arman, B. and Luo, S.N. and Germann, T.C. and Ca\u{g}in, T.},
+  title = 	 {Dynamic response of \textsc{C}u\textsubscript{46}\textsc{Z}r\textsubscript{54} metallic glass to high-strain-rate shock loading: \textsc{P}lasticity, spall, and atomic-level structures},
+  journal = 	 prb,
+  year = 	 2010,
+  volume =	 81,
+  note = 	 144201
+}
 
+@Article{ashby06,
+  author = 	 {Ashby, M.F. and Greer, A.L.},
+  title = 	 {Metallic \textsc{G}lasses as structural materials},
+  journal = 	 sm,
+  year = 	 2006,
+  volume =	 54,
+  pages =	 {321-326}
+}
+
+@Article{bringa05,
+  author = 	 {Bringa, E.M.},
+  title = 	 {Ultrahigh strength in nanocrystalline materials under shock loading},
+  journal = 	 s,
+  year = 	 2005,
+  volume =	 309,
+  pages =	 {1838-1841}
+}
+
+@Book{callister95,
+  author =	 {Callister, W.},
+  title = 	 {Introduction to \textsc{M}aterials \textsc{S}cience and \textsc{E}ngineering},
+  publisher = 	 {Revert\'e},
+  volume = 	 1,
+  year = 	 1995
+}
+
+@Article{cao09,
+  author = 	 {Cao, A.J. and Cheng, Y.Q. and Ma, E.},
+  title = 	 {Structural processes that initiate shear localization in metallic glass},
+  journal = 	 am,
+  year = 	 2009,
+  volume =	 57,
+  pages =	 {5146-5155}
+}
+
+@Article{chen03,
+  author = 	 {Chen, M.W. and  Ma, E. and Hemker, K.J. and Sheng, H. and Cheng, X.},
+  title = 	 {Deformation twinning in nanocrystalline aluminium},
+  journal = 	 s,
+  year = 	 2003,
+  volume =	 300,
+  pages =	 {1275-1277}
+}
+
+@Article{chen74,
+  author = 	 {Chen, H.},
+  title = 	 {Thermodynamic considerations on the formation and stability of metallic glasses},
+  journal = 	 {Acta Metallurgica},
+  year = 	 1974,
+  volume =	 22,
+  number =	 12,
+  pages =	 {1505-1511}
+}
+
+@Article{cheng09,
+  author = 	 {Cheng, Y.Q. and Ma E. and Sheng, H.W.},
+  title = 	 {Atomic level structure in multicomponent bulk metallic glass},
+  journal = 	 prl,
+  year = 	 2009,
+  volume =	 102, 
+  note =	 245501
+}
+
+@Article{cheng11,
+  author = 	 {Cheng, Y.Q. and Ma, E.},
+  title = 	 {Intrinsic shear strength of metallic glass},
+  journal = 	 am,
+  year = 	 2011,
+  volume =	 59,
+  pages =	 {1800-1807}
+}
+
+@Article{daw84,
+  author = 	 {Daw, M. and Baskes, M.I.},
+  title = 	 {Embedded-atom method: \textsc{D}erivation and application to impurities, surfaces, and other defects in metals},
+  journal = 	 prb,
+  year = 	 1984,
+  volume =	 29,
+  pages =	 {6443-6453}
+}
+
+@Article{guan10,
+  author = 	 {Guan, P.},
+  title = 	 {Stress-\textsc{T}emperature \textsc{S}caling for \textsc{S}teady-\textsc{S}tate \textsc{F}low in \textsc{M}etallic \textsc{G}lasses},
+  journal = 	 prl,
+  year = 	 2010,
+  volume =	 104, 
+  note =	 205701
+}
+
+@Article{greer95,
+  author = 	 {Greer, A.L.},
+  title = 	 {Metallic glasses},
+  journal = 	 s,
+  year = 	 1995,
+  volume =	 267,
+  pages =	 {1947-1953}
+}
+
+@Article{humphrey96,
+  author = 	 {Humphrey, W. and Dalk,e A. and Schulten, K.},
+  title = 	 {\textsc{VMD} - \textsc{V}isual \textsc{M}olecular \textsc{D}ynamics},
+  journal = 	 {J. Molec. Graphics},
+  year = 	 1996,
+  volume =	 14,
+  pages =	 {33-38},
+  note = 	 {Site: http://www.ks.uiuc.edu/Research/vmd/}
+}
+
+@Article{inoue00,
+  author = 	 {Inoue, A.},
+  title = 	 {Stabilization of metallic supercooled liquid and bulk amorphous alloys},
+  journal = 	 am,
+  year = 	 2000,
+  volume =	 48,
+  number =	 1,
+  pages =	 {279-306}
+}
+
+@Article{johnson05,
+  author = 	 {Johnson, W.L. and Samwer, K.},
+  title = 	 {A universal criterion for plastic yielding of metallic glasses with a (\textsc{T}/\textsc{T}g)\textsuperscript{2/3} temperature dependence},
+  journal = 	 prl,
+  year = 	 2005,
+  volume =	 95,
+  note =	 195501
+}
+
+@Book{liebermann93,
+  author = 	 {Liebermann, H.},
+  title = 	 {Rapidly \textsc{S}olidified \textsc{A}lloys},
+  publisher = 	 {Marcel Dekker, Inc},
+  year = 	 1993
+}
+
+@Article{lowhaphandu99,
+  author = 	 {Lowhaphandu, P. and Montgomery, S. and Lewandowski, J.},
+  title = 	 {Effects of superimposed hydrostatic pressure on flow and fracture of a \textsc{Z}r-\textsc{T}i-\textsc{N}i-\textsc{C}u-\textsc{B}e bulk amorphous alloy},
+  journal = 	 sm,
+  year = 	 1999,
+  volume =	 41,
+  number =	 1,
+  pages = 	 {19-24}
+}
+
+@Article{lu04,
+  author = 	 {Lu, Z. and Liu, C. and Thompson, J. and Porter, W.},
+  title = 	 {Structural amorphous steels},
+  journal = 	 prl,
+  year = 	 2004,
+  volume =	 92,
+  number =	 24,
+  note = 	 245503
+}
+
+@Book{lu11,
+  author = 	 {Lu, S.},
+  title = 	 {Introduction to bulk metallic glass composite and its recent applications},
+  publisher = 	 {ArXiv eprints.},
+  year = 	 2011,
+  note = 	 {Available in: http://adsabs.harvard.edu/abs/2011arXiv1102.5758L}
+}
+
+@Book{luborsky83,
+  author = 	 {Luborsky, F.},
+  title = 	 {Amorphous metallic alloys},
+  publisher = 	 {Butterworth and Co. Ltd.},
+  year = 	 1983
+}
+
+@Book{malvern69,
+  author = 	 {Malvern, L.},
+  title = 	 {Introduction to the mechanics of a continuous medium},
+  publisher = 	 {Prentice-Hall},
+  year = 	 1969
+}
+
+@Book{miller07,
+  author = 	 {Miller, M. and Liaw, P.},
+  title = 	 {Introduction to the mechanics of a continuous medium},
+  publisher = 	 {Springer Verlag},
+  year = 	 2007
+}
+
+@Article{ogata06,
+  author = 	 {Ogata, S.},
+  title = 	 {Atomistic simulation of shear localization in \textsc{C}u–\textsc{Z}r bulk metallic glass},
+  journal = 	 {Intermetallics},
+  year = 	 2006,
+  volume =	 14,
+  pages = 	 {1033-1037}
+}
+
+@Article{peker93,
+  author = 	 {Peker, A. and Johnson, W.},
+  title = 	 {A highly processable metallic glass: \textsc{Z}r\textsubscript{41.2}\textsc{T}i\textsubscript{13.8}\textsc{C}u\textsubscript{12.5}\textsc{N}i\textsubscript{10.0}\textsc{B}e\textsubscript{22.5}},
+  journal = 	 {Applied Physics Letters},
+  year = 	 1993,
+  volume =	 63,
+  number =	 17,
+  pages = 	 {2342-2344}
+}
+
+@Article{plimpton95,
+  author = 	 {Plimpton, S.},
+  title = 	 {Fast parallel algorithms for short-range molecular dynamics},
+  journal = 	 {J Comp Phys},
+  year = 	 1995,
+  volume =	 117,
+  pages = 	 {1-19},
+  note =	 {Site: http://lammps.sandia.gov.}
+}
+
+@Article{schuh03,
+  author = 	 {Schuh, C.A. and Lund, A.C. and et, al.},
+  title = 	 {Atomistic basis for the plastic yield criterion of metallic glass},
+  journal = 	 {Nature materials},
+  year = 	 2003,
+  volume =	 2,
+  number = 	 7,
+  pages = 	 {449-452}
+}
+
+@Article{schuh07,
+  author = 	 {Schuh, C. and Hufnagel, T. and Ramamurty, U.},
+  title = 	 {Mechanical behavior of amorphous alloys},
+  journal = 	 am,
+  year = 	 2007,
+  volume =	 55,
+  number = 	 12,
+  pages = 	 {4067-4109}
+}
+
+@Article{shimizu07,
+  author = 	 {Shimizu, F. and Ogata, S. and Li, J.},
+  title = 	 {Theory of shear banding in metallic glasses and molecular dynamics calculations},
+  journal = 	 {Materials Transactions},
+  year = 	 2007,
+  volume =	 48,
+  number = 	 11,
+  pages = 	 {2923-2927}
+}
+
+@Book{smith96,
+  author = 	 {Smith, W.},
+  title = 	 {Foundations of \textsc{M}aterial \textsc{S}cience and \textsc{E}ngineering},
+  publisher = 	 {McGraw-Hill},
+  year = 	 1996
+}
+
+@Article{telford04,
+  author = 	 {Telford, M.},
+  title = 	 {The case for bulk metallic glass},
+  journal = 	 {Materials Today},
+  year = 	 2004,
+  volume =	 7,
+  number = 	 3,
+  pages = 	 {36-43}
+}
+
+@Article{wang12,
+  author = 	 {Wang, C.C. and Won,g C.H.},
+  title = 	 {Different icosahedra in metallic glasses: stability and response to shear transformation},
+  journal = 	 sm,
+  year = 	 2012,
+  volume =	 66,
+  pages = 	 {610-613}
+}
+
+@Article{wang04,
+  author = 	 {Wang, W. and Dong, C. and Shek, C.},
+  title = 	 {Bulk metallic glasses},
+  journal = 	 {Materials \textsc{S}cience and \textsc{E}ngineering \textsc{R}eports},
+  year = 	 2004,
+  volume =	 44,
+  number = 	 {2-3},
+  pages = 	 {45-89}
+}
+
+@Article{xiao12,
+  author = 	 {Xiao, Q. and Sheng, H.W. and Shi, Y.},
+  title = 	 {Dominant shear band observed in an amorphous \textsc{Z}r\textsc{C}u\textsc{A}l nanowires under simulated compression},
+  journal = 	 {MRS Communications},
+  year = 	 2012,
+  volume =	 2,
+  pages = 	 {13-16}
+}
+
+@Article{zberg09,
+  author = 	 {Zberg, B. and Uggowitzer, P. and L\"{o}ffler, J.},
+  title = 	 {Mg\textsc{Z}n\textsc{C}a glasses without clinically observable hydrogen evolution for biodegradable implants},
+  journal = 	 {Nature Materials},
+  year = 	 2009,
+  volume =	 8,
+  number = 	 11,
+  pages = 	 {887-891}
+}
+
+@Article{zhang07,
+  author = 	 {Zhang, Z. and Wu, F. and He, G. and Eckert, J.},
+  title = 	 {Mechanical properties, damage and fracture mechanisms of bulk metallic glass materials},
+  journal = 	 {Journal of Materials Science and Technology},
+  year = 	 2007,
+  volume =	 23,
+  number = 	 6,
+  pages = 	 {747-767}
+}
+
+@comment $Id: amcapaper.bib,v 1.6 2006/08/16 17:17:53 mstorti Exp $
