--- a/main.tex
+++ b/main.tex
@@ -106,19 +106,15 @@
 Nosotros, \authorx \hspace{2mm}y \authory, declaramos que esta tesis titulada, '\ttitle' y el trabajo presentado son nuestros. Confirmamos que:
 
 \begin{itemize} 
-\item[\tiny{$\blacksquare$}] This work was done wholly or mainly while in candidature for a research degree at this University.
-\item[\tiny{$\blacksquare$}] Where any part of this thesis has previously been submitted for a degree or any other qualification at this University or any other institution, this has been clearly stated.
-\item[\tiny{$\blacksquare$}] Where I have consulted the published work of others, this is always clearly attributed.
-\item[\tiny{$\blacksquare$}] Where I have quoted from the work of others, the source is always given. With the exception of such quotations, this thesis is entirely my own work.
-\item[\tiny{$\blacksquare$}] I have acknowledged all main sources of help.
-\item[\tiny{$\blacksquare$}] Where the thesis is based on work done by myself jointly with others, I have made clear exactly what was done by others and what I have contributed myself.\\
+\item[\tiny{$\blacksquare$}] \Large{PONER AQUI LOS ITEMS DE LA DECLARACION DE AUTORIA}
+\\
 \end{itemize}
  
-Signed:\\
-\rule[1em]{25em}{0.5pt} % This prints a line for the signature
+Firmas:\\
+\rule[1em]{36em}{0.5pt} % This prints a line for the signature
  
-Date:\\
-\rule[1em]{25em}{0.5pt} % This prints a line to write the date
+Fecha:\\
+\rule[1em]{36em}{0.5pt} % This prints a line to write the date
 }
 
 \clearpage % Start a new page
@@ -129,17 +125,17 @@ Date:\\
 
 \pagestyle{empty} % No headers or footers for the following pages
 
-\null\vfill % Add some space to move the quote down the page a bit
+%\null\vfill % Add some space to move the quote down the page a bit
 
-\textit{``Thanks to my solid academic training, today I can write hundreds of words on virtually any topic without possessing a shred of information, which is how I got a good job in journalism."}
+%\textit{``\Large{UNA FRASE RE COPADA"}
 
-\begin{flushright}
-Dave Barry
-\end{flushright}
+%\begin{flushright}
+%Dave Barry
+%\end{flushright}
 
-\vfill\vfill\vfill\vfill\vfill\vfill\null % Add some space at the bottom to position the quote just right
+%\vfill\vfill\vfill\vfill\vfill\vfill\null % Add some space at the bottom to position the quote just right
 
-\clearpage % Start a new page
+%\clearpage % Start a new page
 
 %----------------------------------------------------------------------------------------
 %	ABSTRACT PAGE
@@ -149,7 +145,7 @@ Dave Barry
 
 \abstract{\addtocontents{toc}{\vspace{1em}} % Add a gap in the Contents, for aesthetics
 
-The Thesis Abstract is written here (and usually kept to just this page). The page is kept centered vertically so can expand into the blank space above the title too\ldots
+\Large{ESCRIBIR UN ABSTRACT RE ZARPADO}\ldots
 }
 
 \clearpage % Start a new page
@@ -162,7 +158,7 @@ The Thesis Abstract is written here (and usually kept to just this page). The pa
 
 \acknowledgements{\addtocontents{toc}{\vspace{1em}} % Add a gap in the Contents, for aesthetics
 
-The acknowledgements and the people to thank go here, don't forget to include your project advisor\ldots
+\Large{AGRADECIMIENTOS ACA, don't forget to include your project advisor\ldots}
 }
 \clearpage % Start a new page
 
@@ -192,7 +188,9 @@ The acknowledgements and the people to thank go here, don't forget to include yo
 \lhead{\emph{Abbreviations}} % Set the left side page header to "Abbreviations"
 \listofsymbols{ll} % Include a list of Abbreviations (a table of two columns)
 {
-\textbf{LAH} & \textbf{L}ist \textbf{A}bbreviations \textbf{H}ere \\
+\textbf{BMG} & \textbf{B}ulk \textbf{M}etalic \textbf{G}lass \\
+\textbf{SB} & \textbf{S}hear \textbf{B}and \\
+\textbf{STZ} & \textbf{S}hear \textbf{T}ransformation \textbf{Z}one \\
 %\textbf{Acronym} & \textbf{W}hat (it) \textbf{S}tands \textbf{F}or \\
 }
 
@@ -238,7 +236,7 @@ $\omega$ & angular frequency & rads$^{-1}$ \\
 
 \pagestyle{empty} % Page style needs to be empty for this page
 
-\dedicatory{For/Dedicated to/To my\ldots} % Dedication text
+\dedicatory{\Large{DEDICATORIA}\ldots} % Dedication text
 
 \addtocontents{toc}{\vspace{2em}} % Add a gap in the Contents, for aesthetics
 
@@ -253,13 +251,13 @@ $\omega$ & angular frequency & rads$^{-1}$ \\
 % Include the chapters of the thesis as separate files from the Chapters folder
 % Uncomment the lines as you write the chapters
 
-\input{Chapters/Chapter1}
-%\input{Chapters/Chapter2} 
-%\input{Chapters/Chapter3}
-%\input{Chapters/Chapter4} 
-%\input{Chapters/Chapter5} 
-%\input{Chapters/Chapter6} 
-%\input{Chapters/Chapter7} 
+\input{Chapters/Capitulo1}
+\input{Chapters/Capitulo2} 
+\input{Chapters/Capitulo3}
+\input{Chapters/Capitulo4} 
+\input{Chapters/Capitulo5} 
+\input{Chapters/Capitulo6} 
+%\input{Chapters/Capitulo7} 
 
 %----------------------------------------------------------------------------------------
 %	THESIS CONTENT - APPENDICES
