--- a/Bibliography.bib
+++ b/Bibliography.bib
@@ -1,40 +1,54 @@
-@article{Reference1,
-	Abstract = {We have developed an enhanced Littrow configuration extended cavity diode laser (ECDL) that can be tuned without changing the direction of the output beam. The output of a conventional Littrow ECDL is reflected from a plane mirror fixed parallel to the tuning diffraction grating. Using a free-space Michelson wavemeter to measure the laser wavelength, we can tune the laser over a range greater than 10 nm without any alteration of alignment.},
-	Author = {C. J. Hawthorn and K. P. Weber and R. E. Scholten},
-	Journal = {Review of Scientific Instruments},
-	Month = {December},
-	Number = {12},
-	Numpages = {3},
-	Pages = {4477--4479},
-	Title = {Littrow Configuration Tunable External Cavity Diode Laser with Fixed Direction Output Beam},
-	Volume = {72},
-	Url = {http://link.aip.org/link/?RSI/72/4477/1},
-	Year = {2001}}
+@article{Albe2013,
+	
+	Author = {K. Albe et al},
+	Journal = {Mech. Mater.},
+	Volume = {67}
+	Pages = {94--103}
+	Title = {Enhancing the plasticity of metallic glasses: {S}hear band formation, nanocomposites and nanoglasses investigated by molecular dynamics simulations}
+	Year = {2013}}
 
-@article{Reference3,
-	Abstract = {Operating a laser diode in an extended cavity which provides frequency-selective feedback is a very effective method of reducing the laser's linewidth and improving its tunability. We have developed an extremely simple laser of this type, built from inexpensive commercial components with only a few minor modifications. A 780~nm laser built to this design has an output power of 80~mW, a linewidth of 350~kHz, and it has been continuously locked to a Doppler-free rubidium transition for several days.},
-	Author = {A. S. Arnold and J. S. Wilson and M. G. Boshier},
-	Journal = {Review of Scientific Instruments},
-	Month = {March},
-	Number = {3},
-	Numpages = {4},
-	Pages = {1236--1239},
-	Title = {A Simple Extended-Cavity Diode Laser},
-	Volume = {69},
-	Url = {http://link.aip.org/link/?RSI/69/1236/1},
-	Year = {1998}}
+@article{Adibi2013,
 
-@article{Reference2,
-	Abstract = {We present a review of the use of diode lasers in atomic physics with an extensive list of references. We discuss the relevant characteristics of diode lasers and explain how to purchase and use them. We also review the various techniques that have been used to control and narrow the spectral outputs of diode lasers. Finally we present a number of examples illustrating the use of diode lasers in atomic physics experiments. Review of Scientific Instruments is copyrighted by The American Institute of Physics.},
-	Author = {Carl E. Wieman and Leo Hollberg},
-	Journal = {Review of Scientific Instruments},
-	Keywords = {Diode Laser},
-	Month = {January},
-	Number = {1},
-	Numpages = {20},
-	Pages = {1--20},
-	Title = {Using Diode Lasers for Atomic Physics},
-	Volume = {62},
-	Url = {http://link.aip.org/link/?RSI/62/1/1},
-	Year = {1991}}
+	Author = {S. Adibi et al},
+	Journal = {Appl. Phys. Lett.},
+	Volume = {103},
+	Pages = {211905},
+	Title = {A transition from localized shear banding to homogeneous superplastic flow in nanoglass},
+	Year = {2013}}
 
+@article{Adibi2014,
+
+	Author = {S. Adibi et al},
+	Journal = {J. Appl. Phys.},
+	Volume = {116},
+	Pages = {043522},
+	Title = {Composition and grain size effects on the structural and mechanical properties of {C}u{Z}r nanoglasses},
+	Year = {2014}}
+
+@article{Lund2007,
+
+	Author = {A. C. Lund et al},
+	Journal = {Philos. Mag. Lett.},
+	Volume = {87},
+	Numpages = {8},
+	Pages = {603--611},
+	Title = {Critical length scales for the deformation of amorphous metals containing nanocrystals},
+	Year = {2007}}
+
+@article{Ardiani2012,
+
+	Author = {F. Ardiani, A. Manelli et al},
+	Journal = {Mec. Comput.},
+	Volume = {31},
+	Pages = {1437--1449},
+	Title = {Atomistic simulations of amorphous metals in the elasto-plastic regime},
+	Year = {2012}}
+
+@article{Ref6,
+
+	Author = {},
+	Journal = {},
+	Volume = {},
+	Pages = {},
+	Title = {},
+	Year = {}}
