--- a/Bibliography.bib
+++ b/Bibliography.bib
@@ -8,17 +8,45 @@
 @string{jap ={J. Appl. Phys.}}
 @string{pml ={Philos. Mag. Lett.}}
 @string{mc ={Mec. Comput.}}
+@string{mt ={Mater. Trans.}}
+@string{jac ={J. Alloys Compd.}}
 
-@article{Albe13,
+@article{Wei2014699,
+	title = "Formation of CuZr-based bulk metallic glass composites containing nanometer-scale B2-CuZr phase through sub-Tg annealing ",
+	journal = jac,
+	volume = "617",
+	number = "0",
+	pages = "699 - 706",
+	year = "2014",
+	issn = "0925-8388",
+	doi = "http://dx.doi.org/10.1016/j.jallcom.2014.08.045",
+	url = "http://www.sciencedirect.com/science/article/pii/S0925838814019008",
+	author = "R. Wei and X.L. Wang and S. Yang and F. Jiang and L. He"}
+
+@article{cheng08,
+	title = {Relationship between structure, dynamics, and mechanical properties in metallic glass-forming alloys},
+	author = {Y. Q. Cheng et al},
+	Journal = prb,
+	volume = {78},
+	pages = {014207},
+	year = {2008}}
+
+@TechReport{pauly10,
+	title = {Phase formation and mechanical properties of metastable \textsc{C}u-\textsc{Zr}-based alloys},
+	author = {Pauly, S.},
+	institution = {Dresden University of Technology},
+	year = {2010}}
+
+@article{albe13,
 	
 	Author = {K. Albe et al},
 	Journal = mm,
-	Volume = {67}
-	Pages = {94--103}
-	Title = {Enhancing the plasticity of metallic glasses: {S}hear band formation, nanocomposites and nanoglasses investigated by molecular dynamics simulations}
+	Volume = {67},
+	Pages = {94--103},
+	Title = {Enhancing the plasticity of metallic glasses: {S}hear band formation, nanocomposites and nanoglasses investigated by molecular dynamics simulations},
 	Year = {2013}}
 
-@article{Adibi13,
+@article{adibi13,
 
 	Author = {S. Adibi et al},
 	Journal = apl,
@@ -27,7 +55,7 @@
 	Title = {A transition from localized shear banding to homogeneous superplastic flow in nanoglass},
 	Year = {2013}}
 
-@article{Adibi14,
+@article{adibi14,
 
 	Author = {S. Adibi et al},
 	Journal = jap,
@@ -36,7 +64,7 @@
 	Title = {Composition and grain size effects on the structural and mechanical properties of {C}u{Z}r nanoglasses},
 	Year = {2014}}
 
-@article{Lund07,
+@article{lund07,
 
 	Author = {A. C. Lund et al},
 	Journal = pml,
@@ -46,7 +74,7 @@
 	Title = {Critical length scales for the deformation of amorphous metals containing nanocrystals},
 	Year = {2007}}
 
-@article{Ardiani12,
+@article{ardiani12,
 
 	Author = {F. Ardiani, A. Manelli et al},
 	Journal = mc,
@@ -64,7 +92,7 @@
 
 @Article{arman10,
   author = 	 {Arman, B. and Luo, S.N. and Germann, T.C. and Ca\u{g}in, T.},
-  title = 	 {Dynamic response of \textsc{C}u\textsubscript{46}\textsc{Z}r\textsubscript{54} metallic glass to high-strain-rate shock loading: \textsc{P}lasticity, spall, and atomic-level structures},
+  title = 	 {Dynamic response of \textsc{C}u$_{46}$\textsc{Z}r$_{54}$ metallic glass to high-strain-rate shock loading: \textsc{P}lasticity, spall, and atomic-level structures},
   journal = 	 prb,
   year = 	 2010,
   volume =	 81,
@@ -180,6 +208,16 @@
   note = 	 {Site: http://www.ks.uiuc.edu/Research/vmd/}
 }
 
+@Article{inoue04,
+  author = 	 {Inoue, A.},
+  title = 	 {Synthesis and Fundamental Properties of Cu-Based Bulk Glassy Alloys in Binary and Multi-component Systems},
+  journal = 	 mt,
+  year = 	 2004,
+  volume =	 45,
+  number =	 4,
+  pages =	 {1153-1162}
+}
+
 @Article{inoue00,
   author = 	 {Inoue, A.},
   title = 	 {Stabilization of metallic supercooled liquid and bulk amorphous alloys},
@@ -266,7 +304,7 @@
 
 @Article{peker93,
   author = 	 {Peker, A. and Johnson, W.},
-  title = 	 {A highly processable metallic glass: \textsc{Z}r\textsubscript{41.2}\textsc{T}i\textsubscript{13.8}\textsc{C}u\textsubscript{12.5}\textsc{N}i\textsubscript{10.0}\textsc{B}e\textsubscript{22.5}},
+  title = 	 {A highly processable metallic glass: \textsc{Z}r$_{41.2}$\textsc{T}i$_{13.8}$\textsc{C}u$_{12.5}$\textsc{N}i$_{10.0}$\textsc{B}e$_{22.5}$},
   journal = 	 {Applied Physics Letters},
   year = 	 1993,
   volume =	 63,
@@ -380,4 +418,3 @@
 }
 
 @comment $Id: amcapaper.bib,v 1.6 2006/08/16 17:17:53 mstorti Exp $
->>>>>>> ab0c739aad3c74bf45710cb4f149db58e5ed8040
