Styles and chapter 5

--- a/Bibliography.bib
+++ b/Bibliography.bib
@@ -10,78 +10,34 @@
 @string{mc ={Mec. Comput.}}
 @string{mt ={Mater. Trans.}}
 @string{jac ={J. Alloys Compd.}}
-
-@article{Wei2014699,
-	title = "Formation of CuZr-based bulk metallic glass composites containing nanometer-scale B2-CuZr phase through sub-Tg annealing ",
-	journal = jac,
-	volume = "617",
-	number = "0",
-	pages = "699 - 706",
-	year = "2014",
-	issn = "0925-8388",
-	doi = "http://dx.doi.org/10.1016/j.jallcom.2014.08.045",
-	url = "http://www.sciencedirect.com/science/article/pii/S0925838814019008",
-	author = "R. Wei and X.L. Wang and S. Yang and F. Jiang and L. He"}
-
-@article{cheng08,
-	title = {Relationship between structure, dynamics, and mechanical properties in metallic glass-forming alloys},
-	author = {Y. Q. Cheng et al},
-	Journal = prb,
-	volume = {78},
-	pages = {014207},
-	year = {2008}}
-
-@TechReport{pauly10,
-	title = {Phase formation and mechanical properties of metastable \textsc{C}u-\textsc{Zr}-based alloys},
-	author = {Pauly, S.},
-	institution = {Dresden University of Technology},
-	year = {2010}}
-
-@article{albe13,
-	
-	Author = {K. Albe et al},
-	Journal = mm,
-	Volume = {67},
-	Pages = {94--103},
-	Title = {Enhancing the plasticity of metallic glasses: {S}hear band formation, nanocomposites and nanoglasses investigated by molecular dynamics simulations},
-	Year = {2013}}
+@string{cms ={Comput. Mater. Sci.}}
 
 @article{adibi13,
 
-	Author = {S. Adibi et al},
+	Author = {Adibi, S. and Sha, Z.D. and Branicio, P.S. and Joshi, S.P. and Liu, Z.S. and Zhang, Y.W.},
 	Journal = apl,
 	Volume = {103},
 	Pages = {211905},
 	Title = {A transition from localized shear banding to homogeneous superplastic flow in nanoglass},
 	Year = {2013}}
-
+	
 @article{adibi14,
-
-	Author = {S. Adibi et al},
+	Author = {Adibi, S. and Branicio, P.S. and Zhang, Y.W. and Joshi, S.P.},
 	Journal = jap,
 	Volume = {116},
 	Pages = {043522},
 	Title = {Composition and grain size effects on the structural and mechanical properties of {C}u{Z}r nanoglasses},
 	Year = {2014}}
 
-@article{lund07,
+@article{albe13,
+	
+	Author = {Albe, K. and Ritter, Y. and \c{S}opu, D.},
+	Journal = mm,
+	Volume = {67},
+	Pages = {94--103},
+	Title = {Enhancing the plasticity of metallic glasses: \textsc{S}hear band formation, nanocomposites and nanoglasses investigated by molecular dynamics simulations},
+	Year = {2013}}
 
-	Author = {A. C. Lund et al},
-	Journal = pml,
-	Volume = {87},
-	Numpages = {8},
-	Pages = {603--611},
-	Title = {Critical length scales for the deformation of amorphous metals containing nanocrystals},
-	Year = {2007}}
-
-@article{ardiani12,
-
-	Author = {F. Ardiani, A. Manelli et al},
-	Journal = mc,
-	Volume = {31},
-	Pages = {1437--1449},
-	Title = {Atomistic simulations of amorphous metals in the elasto-plastic regime},
-	Year = {2012}}
 
 @Book{allen87,
   author =	 {Allen, M.P. and Tildesley, D.J.},
@@ -96,7 +52,7 @@
   journal = 	 prb,
   year = 	 2010,
   volume =	 81,
-  note = 	 144201
+  pages = 	 144201
 }
 
 @Article{ashby06,
@@ -109,7 +65,7 @@
 }
 
 @Article{bringa05,
-  author = 	 {Bringa, E.M.},
+  author = 	 {Bringa, E.M. and Caro, A. and Wang, Y.M. and Victoria, M. and McNaney, J. and Remington, B.A. and Smith, R. and Torralva, B. and Van Swygenhoven, H.},
   title = 	 {Ultrahigh strength in nanocrystalline materials under shock loading},
   journal = 	 s,
   year = 	 2005,
@@ -153,13 +109,21 @@
   pages =	 {1505-1511}
 }
 
+@article{cheng08,
+	title = {Relationship between structure, dynamics, and mechanical properties in metallic glass-forming alloys},
+	author = {Cheng, Y.Q. and Sheng, H.W. and Ma, E.},
+	Journal = prb,
+	volume = {78},
+	pages = {014207},
+	year = {2008}}
+
 @Article{cheng09,
-  author = 	 {Cheng, Y.Q. and Ma E. and Sheng, H.W.},
+  author = 	 {Cheng, Y.Q. and Ma, E. and Sheng, H.W.},
   title = 	 {Atomic level structure in multicomponent bulk metallic glass},
   journal = 	 prl,
   year = 	 2009,
   volume =	 102, 
-  note =	 245501
+  pages =	 245501
 }
 
 @Article{cheng11,
@@ -180,15 +144,6 @@
   pages =	 {6443-6453}
 }
 
-@Article{guan10,
-  author = 	 {Guan, P.},
-  title = 	 {Stress-\textsc{T}emperature \textsc{S}caling for \textsc{S}teady-\textsc{S}tate \textsc{F}low in \textsc{M}etallic \textsc{G}lasses},
-  journal = 	 prl,
-  year = 	 2010,
-  volume =	 104, 
-  note =	 205701
-}
-
 @Article{greer95,
   author = 	 {Greer, A.L.},
   title = 	 {Metallic glasses},
@@ -198,24 +153,32 @@
   pages =	 {1947-1953}
 }
 
+@Article{guan10,
+  author = 	 {Guan, P. and Chen, M. and Egami, T.},
+  title = 	 {Stress-\textsc{T}emperature \textsc{S}caling for \textsc{S}teady-\textsc{S}tate \textsc{F}low in \textsc{M}etallic \textsc{G}lasses},
+  journal = 	 prl,
+  year = 	 2010,
+  volume =	 104, 
+  pages =	 205701
+}
+
+@Article{guan13,
+  author = 	 {Guan, P.P. and Lu, S. and Spector, M. and Valavala, P. and Falk, M.},
+  title = 	 {Cavitation in amorphous solids},
+  journal = 	 prl,
+  year = 	 2013,
+  volume =	 110, 
+  pages =	 185502
+}
+
 @Article{humphrey96,
-  author = 	 {Humphrey, W. and Dalk,e A. and Schulten, K.},
+  author = 	 {Humphrey, W. and Dalke, A. and Schulten, K.},
   title = 	 {\textsc{VMD} - \textsc{V}isual \textsc{M}olecular \textsc{D}ynamics},
   journal = 	 {J. Molec. Graphics},
   year = 	 1996,
   volume =	 14,
   pages =	 {33-38},
   note = 	 {Site: http://www.ks.uiuc.edu/Research/vmd/}
-}
-
-@Article{inoue04,
-  author = 	 {Inoue, A.},
-  title = 	 {Synthesis and Fundamental Properties of Cu-Based Bulk Glassy Alloys in Binary and Multi-component Systems},
-  journal = 	 mt,
-  year = 	 2004,
-  volume =	 45,
-  number =	 4,
-  pages =	 {1153-1162}
 }
 
 @Article{inoue00,
@@ -228,13 +191,23 @@
   pages =	 {279-306}
 }
 
+@Article{inoue04,
+  author = 	 {Inoue, A.},
+  title = 	 {Synthesis and Fundamental Properties of Cu-Based Bulk Glassy Alloys in Binary and Multi-component Systems},
+  journal = 	 mt,
+  year = 	 2004,
+  volume =	 45,
+  number =	 4,
+  pages =	 {1153-1162}
+}
+
 @Article{johnson05,
   author = 	 {Johnson, W.L. and Samwer, K.},
   title = 	 {A universal criterion for plastic yielding of metallic glasses with a (\textsc{T}/\textsc{T}g)\textsuperscript{2/3} temperature dependence},
   journal = 	 prl,
   year = 	 2005,
   volume =	 95,
-  note =	 195501
+  pages =	 195501
 }
 
 @Book{liebermann93,
@@ -261,7 +234,7 @@
   year = 	 2004,
   volume =	 92,
   number =	 24,
-  note = 	 245503
+  pages = 	 245503
 }
 
 @Book{lu11,
@@ -278,6 +251,15 @@
   publisher = 	 {Butterworth and Co. Ltd.},
   year = 	 1983
 }
+
+@article{lund07,
+	Author = {Lund, A.C. and Schuh, C.A.},
+	Journal = pml,
+	Volume = {87},
+	Numpages = {8},
+	Pages = {603--611},
+	Title = {Critical length scales for the deformation of amorphous metals containing nanocrystals},
+	Year = {2007}}
 
 @Book{malvern69,
   author = 	 {Malvern, L.},
@@ -302,6 +284,12 @@
   pages = 	 {1033-1037}
 }
 
+@TechReport{pauly10,
+	title = {Phase formation and mechanical properties of metastable \textsc{C}u-\textsc{Zr}-based alloys},
+	author = {Pauly, S.},
+	institution = {Dresden University of Technology},
+	year = {2010}}
+
 @Article{peker93,
   author = 	 {Peker, A. and Johnson, W.},
   title = 	 {A highly processable metallic glass: \textsc{Z}r$_{41.2}$\textsc{T}i$_{13.8}$\textsc{C}u$_{12.5}$\textsc{N}i$_{10.0}$\textsc{B}e$_{22.5}$},
@@ -323,7 +311,7 @@
 }
 
 @Article{schuh03,
-  author = 	 {Schuh, C.A. and Lund, A.C. and et, al.},
+  author = 	 {Schuh, C.A. and Lund, A.C.},
   title = 	 {Atomistic basis for the plastic yield criterion of metallic glass},
   journal = 	 {Nature materials},
   year = 	 2003,
@@ -369,15 +357,6 @@
   pages = 	 {36-43}
 }
 
-@Article{wang12,
-  author = 	 {Wang, C.C. and Won,g C.H.},
-  title = 	 {Different icosahedra in metallic glasses: stability and response to shear transformation},
-  journal = 	 sm,
-  year = 	 2012,
-  volume =	 66,
-  pages = 	 {610-613}
-}
-
 @Article{wang04,
   author = 	 {Wang, W. and Dong, C. and Shek, C.},
   title = 	 {Bulk metallic glasses},
@@ -388,6 +367,36 @@
   pages = 	 {45-89}
 }
 
+@Article{wang10,
+  author = 	 {Wang, J. and Hodgson, P. and Zhang, J. and Yan, W. and Yang, C.},
+  title = 	 {Effects of pores on shear bands in metallic glasses: \textsc{A} molecular dynamics study},
+  journal = 	 cms,
+  year = 	 2010,
+  volume =	 50,
+  pages = 	 {211-217}
+}
+
+@Article{wang12,
+  author = 	 {Wang, C.C. and Wong, C.H.},
+  title = 	 {Different icosahedra in metallic glasses: stability and response to shear transformation},
+  journal = 	 sm,
+  year = 	 2012,
+  volume =	 66,
+  pages = 	 {610-613}
+}
+
+@article{wei14,
+	title = "Formation of CuZr-based bulk metallic glass composites containing nanometer-scale B2-CuZr phase through sub-Tg annealing ",
+	journal = jac,
+	volume = "617",
+	number = "0",
+	pages = "699 - 706",
+	year = "2014",
+	issn = "0925-8388",
+	doi = "http://dx.doi.org/10.1016/j.jallcom.2014.08.045",
+	url = "http://www.sciencedirect.com/science/article/pii/S0925838814019008",
+	author = "Wei, R. and Wang, X.L. and Yang, S. and Jiang, F. and He, L."}
+
 @Article{xiao12,
   author = 	 {Xiao, Q. and Sheng, H.W. and Shi, Y.},
   title = 	 {Dominant shear band observed in an amorphous \textsc{Z}r\textsc{C}u\textsc{A}l nanowires under simulated compression},
@@ -395,6 +404,15 @@
   year = 	 2012,
   volume =	 2,
   pages = 	 {13-16}
+}
+
+@Article{yuan14,
+  author = 	 {Yuan, F. and Wum, F.},
+  title = 	 {Scaling laws and deformation mechanisms of nanoporous copper under adiabatic uniaxial strain compression},
+  journal = 	 {AIP ADVANCES},
+  year = 	 2014,
+  volume =	 4,
+  pages = 	 127109
 }
 
 @Article{zberg09,
