--- a/main.tex
+++ b/main.tex
@@ -30,6 +30,7 @@
 \graphicspath{{Pictures/}{Figures/}{Figures/Cap_3/}{Figures/Cap_4}{Figures/Cap_5}} % Specifies the directory where pictures are stored
 
 \usepackage[square, numbers, comma, sort&compress]{natbib} % Use the natbib reference package - read up on this to edit the reference style; if you want text (e.g. Smith et al., 2012) for the in-text references (instead of numbers), remove 'numbers' 
+\usepackage{subfig}
 \usepackage[spanish]{babel}
 \hypersetup{urlcolor=blue, colorlinks=true} % Colors hyperlinks in blue - change to black if annoying
 \title{\ttitle} % Defines the thesis title - don't touch this
@@ -142,7 +143,6 @@ Fecha:\\
 %----------------------------------------------------------------------------------------
 
 \addtotoc{Resumen} % Add the "Abstract" page entry to the Contents
-
 \abstract{\addtocontents{toc}{\vspace{1em}} % Add a gap in the Contents, for aesthetics
 
 \Large{ESCRIBIR UN ABSTRACT RE ZARPADO}\ldots
