--- a/Bibliography.bib
+++ b/Bibliography.bib
@@ -11,6 +11,7 @@
 @string{mt ={Mater. Trans.}}
 @string{jac ={J. Alloys Compd.}}
 @string{cms ={Comput. Mater. Sci.}}
+@string{nl ={Nano Lett.}}
 
 @article{adibi13,
 
@@ -34,7 +35,7 @@
 	Author = {Albe, K. and Ritter, Y. and \c{S}opu, D.},
 	Journal = mm,
 	Volume = {67},
-	Pages = {94--103},
+	Pages = {94-103},
 	Title = {Enhancing the plasticity of metallic glasses: \textsc{S}hear band formation, nanocomposites and nanoglasses investigated by molecular dynamics simulations},
 	Year = {2013}}
 
@@ -178,7 +179,7 @@
   year = 	 1996,
   volume =	 14,
   pages =	 {33-38},
-  note = 	 {Site: http://www.ks.uiuc.edu/Research/vmd/}
+  url = 	 {http://www.ks.uiuc.edu/Research/vmd/}
 }
 
 @Article{inoue00,
@@ -217,6 +218,15 @@
   year = 	 1993
 }
 
+@Article{liontas14,
+  author = 	 {Liontas, R. and Gu, X.W. and Fu, E. and Wang, Y. and Li, N. Mara, N. and Greer, J.R.},
+  title = 	 {Effects of \textsc{H}elium \textsc{I}mplantation on the \textsc{T}ensile \textsc{P}roperties and \textsc{M}icrostructure of \textsc{N}i$_{73}$ \textsc{P}$_{27}$ \textsc{M}etallic \textsc{G}lass \textsc{N}anostructures},
+  journal = 	 nl,
+  year = 	 2014,
+  volume =	 14,
+  pages = 	 {5176-5183}
+}
+
 @Article{lowhaphandu99,
   author = 	 {Lowhaphandu, P. and Montgomery, S. and Lewandowski, J.},
   title = 	 {Effects of superimposed hydrostatic pressure on flow and fracture of a \textsc{Z}r-\textsc{T}i-\textsc{N}i-\textsc{C}u-\textsc{B}e bulk amorphous alloy},
@@ -242,7 +252,7 @@
   title = 	 {Introduction to bulk metallic glass composite and its recent applications},
   publisher = 	 {ArXiv eprints.},
   year = 	 2011,
-  note = 	 {Available in: http://adsabs.harvard.edu/abs/2011arXiv1102.5758L}
+  url = 	 {http://adsabs.harvard.edu/abs/2011arXiv1102.5758L}
 }
 
 @Book{luborsky83,
@@ -257,7 +267,7 @@
 	Journal = pml,
 	Volume = {87},
 	Numpages = {8},
-	Pages = {603--611},
+	Pages = {603-611},
 	Title = {Critical length scales for the deformation of amorphous metals containing nanocrystals},
 	Year = {2007}}
 
@@ -307,7 +317,7 @@
   year = 	 1995,
   volume =	 117,
   pages = 	 {1-19},
-  note =	 {Site: http://lammps.sandia.gov.}
+  url	 =	 {http://lammps.sandia.gov/}
 }
 
 @Article{schuh03,
@@ -345,6 +355,16 @@
   title = 	 {Foundations of \textsc{M}aterial \textsc{S}cience and \textsc{E}ngineering},
   publisher = 	 {McGraw-Hill},
   year = 	 1996
+}
+
+@Article{stukowski10,
+  author = 	 {Stukowski, A.},
+  title = 	 {Visualization and analysis of atomistic simulation data with \textsc{OVITO} - the \textsc{O}pen \textsc{V}isualization \textsc{T}ool},
+  journal = 	 {Modelling Simul. Mater. Sci. Eng.},
+  year = 	 2004,
+  volume =	 18,
+  pages = 	 {015012},
+  url = 	 {http://ovito.org/}
 }
 
 @Article{telford04,
