--- a/main.tex
+++ b/main.tex
@@ -196,8 +196,10 @@ Fecha:\\
 \listofsymbols{ll} % Include a list of Abbreviations (a table of two columns)
 {
 \textbf{BMG} & \textbf{B}ulk \textbf{M}etalic \textbf{G}lass \\
+\textbf{EAM} & \textbf{E}mbedded \textbf{A}tom \textbf{M}ethod \\
 \textbf{SB} & \textbf{S}hear \textbf{B}and \\
 \textbf{STZ} & \textbf{S}hear \textbf{T}ransformation \textbf{Z}one \\
+\textbf{SVF} & \textbf{S}olid \textbf{V}olume \textbf{F}raction \\
 %\textbf{Acronym} & \textbf{W}hat (it) \textbf{S}tands \textbf{F}or \\
 }
 
@@ -233,13 +235,20 @@ Speed of Light & $c$ & $=$ & $2.997\ 924\ 58\times10^{8}\ \mbox{ms}^{-\mbox{s}}$
 
 \listofnomenclature{lll} % Include a list of Symbols (a three column table)
 {
-$a$ & distance & m \\
-$P$ & power & W (Js$^{-1}$) \\
+
+$E$ & módulo de Young & GPa \\
+$G$ & módulo de corte & GPa \\
+$R$ & coeficiente de correlación &  \\
+$T$ & temperatura & K \\
+$T_{g}$ & temperatura de transición vítrea & K \\
 % Symbol & Name & Unit \\
 
 & & \\ % Gap to separate the Roman symbols from the Greek
 
-$\omega$ & angular frequency & rads$^{-1}$ \\
+$\epsilon$ & deformación ingenieril &  \\
+$\sigma$ & tensión & GPa \\
+$\sigma_{y}$ & tensión de fluencia & GPa \\
+$\sigma_{VM}$ & tensión de von Mieses & GPa \\
 % Symbol & Name & Unit \\
 }
 
