--- a/main.tex
+++ b/main.tex
@@ -196,6 +196,7 @@ Fecha:\\
 \listofsymbols{ll} % Include a list of Abbreviations (a table of two columns)
 {
 \textbf{BMG} & \textbf{B}ulk \textbf{M}etalic \textbf{G}lass \\
+\textbf{CSM} & \textbf{C}ooperative \textbf{S}hear \textbf{M}odel \\
 \textbf{EAM} & \textbf{E}mbedded \textbf{A}tom \textbf{M}ethod \\
 \textbf{SB} & \textbf{S}hear \textbf{B}and \\
 \textbf{STZ} & \textbf{S}hear \textbf{T}ransformation \textbf{Z}one \\
