Introduccion y correciones menores

--- a/Bibliography.bib
+++ b/Bibliography.bib
@@ -367,6 +367,13 @@
   url = 	 {http://ovito.org/}
 }
 
+@Book{suryana11,
+  author = 	 {Suryanarayana, C. and Inoue, A.},
+  title = 	 {Bulk \textsc{M}etallic \textsc{G}lasses},
+  publisher = 	 {CRC Press},
+  year = 	 2011
+}
+
 @Article{telford04,
   author = 	 {Telford, M.},
   title = 	 {The case for bulk metallic glass},
