--- a/Bibliography.bib
+++ b/Bibliography.bib
@@ -384,6 +384,16 @@
   pages = 	 {36-43}
 }
 
+@Article{turnbull61,
+  author = 	 {Turnbull, D. and Cohen, M.H.},
+  title = 	 {Free-\textsc{V}olume \textsc{M}odel of the \textsc{A}morphous \textsc{P}hase: \textsc{G}lass \textsc{T}ransition},
+  journal = 	 {Journal of Chemical Physics},
+  year = 	 1961,
+  volume =	 34,
+  number = 	 1,
+  pages = 	 {120-125}
+}
+
 @Article{wang04,
   author = 	 {Wang, W. and Dong, C. and Shek, C.},
   title = 	 {Bulk metallic glasses},
