algo de antecedentes y de intro a simulaciones

--- a/main.tex
+++ b/main.tex
@@ -201,6 +201,7 @@ Fecha:\\
 \textbf{SB} & \textbf{S}hear \textbf{B}and \\
 \textbf{STZ} & \textbf{S}hear \textbf{T}ransformation \textbf{Z}one \\
 \textbf{SVF} & \textbf{S}olid \textbf{V}olume \textbf{F}raction \\
+\textbf{MD} & \textbf{M}olecular \textbf{D}ynamics \\
 %\textbf{Acronym} & \textbf{W}hat (it) \textbf{S}tands \textbf{F}or \\
 }
 
@@ -222,7 +223,7 @@ Fecha:\\
 
 \listofconstants{lrcl} % Include a list of Physical Constants (a four column table)
 {
-Speed of Light & $c$ & $=$ & $2.997\ 924\ 58\times10^{8}\ \mbox{ms}^{-\mbox{s}}$ (exact)\\
+Constante de Boltzmann & $k_{B}$ & $=$ & $1.380\ 65\ \times10^{-23}\ \mbox{J}\mbox{K}^{-\mbox{1}}$ \\
 % Constant Name & Symbol & = & Constant Value (with units) \\
 }
 
