un poco cap1 y cap2

--- a/Bibliography.bib
+++ b/Bibliography.bib
@@ -12,6 +12,37 @@
 @string{jac ={J. Alloys Compd.}}
 @string{cms ={Comput. Mater. Sci.}}
 @string{nl ={Nano Lett.}}
+@string{nat = {Nature}}
+@string{pnasus = {P. Natl. Acad. Sci. USA}}
+
+@article{Wisitsorasak12,
+
+	Author = {Wisitsorasak, A. and Wolynes, P. G.},
+	Journal = pnasus,
+	Volume = 109,
+	Pages = {16068–16072},
+	Title = {On the strength of glasses},
+	Year = {2012}}
+	
+
+@article{cohen61,
+
+	Author = {Cohen, M. H. and Turnbull, D.},
+	Journal = nat,
+	Volume = {189},
+	Pages = {131},
+	Title = {Composition Requirements for Glass Formation in Metallic and Ionic Systems},
+	Year = {1961}}
+	
+
+@article{duwez60,
+
+	Author = {Fourie, J. T. and Weinberg, F. and Boswell, F. W. C},
+	Journal = jap,
+	Volume = {31},
+	Pages = {1136},
+	Title = {Preparation of Tin Single Crystals for Transmission Electron Microscopy},
+	Year = {1960}}
 
 @article{adibi13,
 
