--- a/main.tex
+++ b/main.tex
@@ -152,7 +152,7 @@ Fecha:\\
 
 \abstract{\addtocontents{toc}{\vspace{1em}} % Add a gap in the Contents, for aesthetics
 
-\Large{ESCRIBIR UN ABSTRACT RE ZARPADO}\ldots
+\Large{ESCRIBIR ABSTRACT}\ldots
 }
 
 \clearpage % Start a new page
