--- a/Bibliography.bib
+++ b/Bibliography.bib
@@ -15,6 +15,12 @@
 @string{nat = {Nature}}
 @string{pnasus = {P. Natl. Acad. Sci. USA}}
 
+@article{setfl,
+
+	Author = {O'Brien, C.},
+	Title = {Formatting EAM Potentials},
+	url = {https://sites.google.com/a/ncsu.edu/cjobrien/tutorials-and-guides/eam}}
+
 @article{Wisitsorasak12,
 
 	Author = {Wisitsorasak, A. and Wolynes, P. G.},
